Scaling Grease Pencil Strokes in Edit Mode Scales Thickness #93163

Closed
opened 2021-11-17 18:58:25 +01:00 by Miguel Cardenas · 13 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49

Blender Version
Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-05 22:17, hash: 7a5b8cb202

Short description of error
When going into edit mode, then duplicating GP strokes and mirroring them, the line thickness changes as well. It didn't used to be this way.

Exact steps for others to reproduce the error
Open .blend file, select GP object, tab into edit mode, select strokes, press "s" to scale, then "x" to limit to x-axis, then "-1" to invert strokes, and examine my pain.

Test File:
new.blend

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49 **Blender Version** Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-05 22:17, hash: `7a5b8cb202` **Short description of error** When going into edit mode, then duplicating GP strokes and mirroring them, the line thickness changes as well. It didn't used to be this way. **Exact steps for others to reproduce the error** Open .blend file, select GP object, tab into edit mode, select strokes, press "s" to scale, then "x" to limit to x-axis, then "-1" to invert strokes, and examine my pain. Test File: [new.blend](https://archive.blender.org/developer/F11820362/new.blend)

Added subscriber: @Miguel-Cardenas

Added subscriber: @Miguel-Cardenas

It occurs to me that this may be a feature and not a bug, but blender didn't used to operate this way. Please let me know if I'm mistaken!

It occurs to me that this may be a feature and not a bug, but blender didn't used to operate this way. Please let me know if I'm mistaken!
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscriber: @frogstomp-4

Added subscriber: @frogstomp-4

@Miguel-Cardenas there is scale thickness option you need to untick, report back please if that solved it so we can close the task
image.png

alternatively, you could also "r z 180"

@Miguel-Cardenas there is scale thickness option you need to untick, report back please if that solved it so we can close the task ![image.png](https://archive.blender.org/developer/F11823290/image.png) alternatively, you could also "r z 180"

Added subscriber: @antoniov

Added subscriber: @antoniov

This is the commit that changed behavior:
https://developer.blender.org/rB6fc92b296fae

Also described in release notes:
https://wiki.blender.org/wiki/Reference/Release_Notes/3.0/Grease_Pencil
"Use Scale Thickness option is now enabled by default in 2D template. (6fc92b296f)"

CC @antoniov

This is the commit that changed behavior: https://developer.blender.org/rB6fc92b296fae Also described in release notes: https://wiki.blender.org/wiki/Reference/Release_Notes/3.0/Grease_Pencil "Use Scale Thickness option is now enabled by default in 2D template. (6fc92b296f)" CC @antoniov
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

Generally, this might be an intentional change, BUT:
I think negative scaling should not scale the thickness like that? Should this use an absolute value?

Generally, this might be an intentional change, BUT: I think negative scaling should not scale the thickness like that? Should this use an absolute value?

This issue was referenced by 784c04bcbd

This issue was referenced by 784c04bcbd33dd1490d8e7acdb3f7c0ed5e1a298

This issue was referenced by 49a18cc91e

This issue was referenced by 49a18cc91e55c92d5e0261d70b56eb3e2a10b0fa

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Antonio Vazquez self-assigned this 2021-12-30 11:18:21 +01:00
Sign in to join this conversation.
6 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#93163
No description provided.