Fix T93163: GPencil scale thickness fails in negative scales

Before the negative scales produced a thickness invalid. Now, the value is used in absolute value to avoid this situation.