source/blender/editors/transform/transform_mode.c
@@ -1042,7 +1042,7 @@ void ElementResize(const TransInfo *t,
       applyNumInput(&num_evil, values_final_evil);
 
       float ratio = values_final_evil[0];
-      *td->val = td->ival * ratio * gps->runtime.multi_frame_falloff;
+      *td->val = td->ival * fabs(ratio) * gps->runtime.multi_frame_falloff;
       CLAMP_MIN(*td->val, 0.001f);
     }
   }
